# noflake

./: .gitignore  README.md
backend/: README.md  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts  server.ts  system-tick.ts
backend/src/services/: event-service.ts  reservation-service.ts  settlement-service.ts
backend/src/store/: in-memory-store.ts
backend/tests/: api.test.ts  reservation-service.test.ts  settlement-service.test.ts
contracts/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/programs/noflake/: Cargo.toml
contracts/programs/noflake/src/: lib.rs
contracts/scripts/: test-local.sh
contracts/tests/: noflake.ts
docs/: README.md  demo-script.md  devnet-wallet-payment-setup.md  local-setup.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: event-form.tsx  reservation-card.tsx  wallet-intent-preview.test.tsx  wallet-intent-preview.tsx  wallet-provider.tsx
frontend/src/lib/: api-base-url.test.ts  api-base-url.ts  api.ts  solana-client.test.ts  solana-client.ts  solana-config.ts  solana-transaction.test.ts  solana-transaction.ts  wallet-intent.test.ts  wallet-intent.ts  wallet-path.ts  (+2 more)
frontend/tests/: checkin.spec.ts  home.spec.ts  organizer.spec.ts  reservation.spec.ts  test-helpers.ts
infra/: README.md
shared/: README.md  package-lock.json  package.json
shared/src/: constants.ts  schemas.ts  types.ts
shared/tests/: constants.test.ts  schemas.test.ts
(+3 files in other folders)
