[package]
name = "noflake"
version = "0.1.0"
description = "NoFlake Solana program scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "noflake"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
